Small fix to overflowing descriptions on transformations

--- a/modules/admin/app/assets/css/datamanager.scss
+++ b/modules/admin/app/assets/css/datamanager.scss
@@ -210,6 +210,10 @@ body {
 
       .transformation-item-name {
         grid-area: name;
+
+        white-space: nowrap;;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .transformation-item-edit {
@@ -224,9 +228,6 @@ body {
       .transformation-item-comments {
         font-size: $font-size-xs;
         color: $text-muted;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: fade;
       }
     }
   }
